Add GPT knockout structure administration
